--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="card">
                 <div class="card-body yellow">
                     <button class="btn btn-primary-outline float-right close-icon"><i class="fa fa-times"></i></button>
-                    <h5 class="card-title text-muted" contenteditable="true">Title</h5>
+                    <h5 class="card-title" contenteditable="true">Title</h5>
                     <p class="card-text" contenteditable="true">Note</p>
                     <button class="btn btn-primary m-1 float-right save-btn">Save</button>
                     <div class="dropdown">
@@ -44,6 +44,9 @@
                             <a class="dropdown-item color-picker yellow" href="#">Yellow</a>
                             <a class="dropdown-item color-picker lime" href="#">Lime</a>
                             <a class="dropdown-item color-picker aqua" href="#">Aqua</a>
+                            <a class="dropdown-item color-picker black" href="#">Black</a>
+                            <a class="dropdown-item color-picker purple" href="#">Purple</a>
+                            <a class="dropdown-item color-picker blue" href="#">Blue</a>
                         </div>
                     </div>
                 </div>
