--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             crossorigin="anonymous"></script>
     </head>
     <body>
-        <h2 class="mx-3 my-4">My Notes</h2>
+        <h2 class="mx-3 my-4"><strong>My Notes</strong></h2>
         <div class="container-fluid">
         </div>
 
